--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
     "require": {
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.1"
+        "phpunit/phpunit": "^6.1",
+        "theseer/phpdox": "^0.10.1",
+        "phploc/phploc": "^4.0"
     }
 }
